--- a/bco/Views/Home/Index.cshtml
+++ b/bco/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                 <a href="#">¿Olvidaste el número?</a>
             </div>
             <div class="col-xs-4">
-                <a href="#" role="button" class="btn btn-warning" id="ingresar" style="margin-left:3%;" onclick="Verificar()">Ingresar</a>
+                <a href="#" role="button" class="btn btn-warning" id="ingresar" style="margin-left:3%;" onclick="Verificar()">Aceptar</a>
             </div>
         </form>
     </div>
