--- a/bco/Views/Home/Password.cshtml
+++ b/bco/Views/Home/Password.cshtml
@@ -38,7 +38,7 @@
                 <a href="#"></a>
             </div>
             <div class="col-xs-4">
-                <a href="#" role="button" class="btn btn-warning" id="ingresar" style="margin-left:3%;" onclick="VerificarPassword()">Ingresar</a>
+                <a href="#" role="button" class="btn btn-warning" id="ingresar" style="margin-left:3%;" onclick="VerificarPassword()">Aceptar</a>
             </div>
         </form>
     </div>
